// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentBarFieldTransformer Render 0 value (snapshot) 1`] = `
<div>
  <span
    class="container animated"
    title="0/100 (0%)"
  >
    <span
      class="barBackground"
      style="height:16px;border-radius:3px"
    >
      <span
        class="barFill gradientSmooth"
        style="width:0%;border-radius:3px"
      />
    </span>
    <span
      class="valueOutside"
      style="color:#000000"
    >
      0%
    </span>
  </span>
</div>
`;

exports[`PercentBarFieldTransformer Render 50/100 bar (snapshot) 1`] = `
<div>
  <span
    class="container animated"
    title="50/100 (50%)"
  >
    <span
      class="barBackground"
      style="height:16px;border-radius:3px"
    >
      <span
        class="barFill gradientSmooth"
        style="width:50%;border-radius:3px;background-size:200% 100%"
      />
    </span>
    <span
      class="valueOutside"
      style="color:#000000"
    >
      50%
    </span>
  </span>
</div>
`;
